cmake_minimum_required(VERSION 3.0)
project(OpenCVProject)
set(CMAKE_CXX_STANDARD 14)

find_package(OpenCV)

if(OpenCV_FOUND)
    include_directories(include ${OpenCV_INCLUDE_DIRS})
    add_executable(cameraTest src/cameraTest.cpp)
    add_executable(calibration src/calibration.cpp)
    add_executable(depthMap src/depthMap.cpp)
    target_link_libraries(cameraTest ${OpenCV_LIBS})
    target_link_libraries(calibration ${OpenCV_LIBS})
    target_link_libraries(depthMap ${OpenCV_LIBS})
else()
    include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
    conan_basic_setup()
    include_directories(include src)
    add_executable(cameraTest src/cameraTest.cpp)
    add_executable(calibration src/calibration.cpp)
    add_executable(depthMap src/depthMap.cpp)
    target_link_libraries(cameraTest ${CONAN_LIBS})
    target_link_libraries(calibration ${CONAN_LIBS})
    target_link_libraries(depthMap ${CONAN_LIBS})
endif()    
